fix some sentences
Corrected some sentences with grammatical errors, or unclear

--- a/src/lang/it.json
+++ b/src/lang/it.json
@@ -1552,7 +1552,7 @@
   "View invoices and manage payment options using the Stripe billing portal": "Visualizza le fatture e gestisci le opzioni di pagamento utilizzando il portale di fatturazione Stripe",
   "View on Strava": "Visualizza su Strava",
   "Viewer": "Spettatore",
-  "Virtual Ride": "Giro in bici virtuale",
+  "Virtual Ride": "Pedalata virtuale",
   "Virtual Run": "Corsa virtuale",
   "Visibility": "Visibilità",
   "Visible to non-members": "Visibile ai non membri",
@@ -1578,17 +1578,17 @@
   "Watts Range": "Intervallo di Watt",
   "Watts/kg": "Watt/kg",
   "Wbal": "W'bal",
-  "Wbal delta": "Wbal delta",
-  "Wbal end": "Fine del verbale",
-  "Wbal start": "Inizio verbale",
+  "Wbal delta": "Delta Wbal",
+  "Wbal end": "Fine Wbal",
+  "Wbal start": "Inizio Wbal",
   "Wbal ᐁ": "W'bal ᐁ",
   "Weak": "Debole",
   "Weather": "Meteo",
   "Website for more info": "Sito web per maggiori informazioni",
   "Wednesday": "Mercoledì",
-  "Week": "Sett.",
+  "Week": "Settimana",
   "Week_short": "Sett.",
-  "Weekly": "Settimanalmente",
+  "Weekly": "Settimanale",
   "Weekly Average": "Media settimanale",
   "Weekly Max": "Massimo settimanale",
   "Weekly Ramp Rate": "Rapporto rampa settimanale",
@@ -1630,7 +1630,7 @@
   "Whole activity": "Tutta l'attività",
   "Whole plan": "Tutto il piano",
   "Width": "Larghezza",
-  "Wind": "vento",
+  "Wind": "Vento",
   "Windsurf": "Windsurf",
   "Work": "Lavoro",
   "Work >FTP": "Lavoro > FTP",
@@ -1709,7 +1709,7 @@
   "analyse_for_pace_zones": "Rianalizzare questa attività per vedere il tempo nelle zone di ritmo",
   "and": "e",
   "as used in": "come usato in",
-  "ask_admin_to_join": "Se volete unirvi a questo gruppo chiedete a uno degli amministratori",
+  "ask_admin_to_join": "Se vuoi entrare a far parte di questo gruppo chiedi a uno degli amministratori",
   "athlete_has_not_shared_fitness_charts": "{n} non ha condiviso alcun grafico fitness",
   "athlete_has_not_shared_input_fields": "{n} non ha condiviso alcun campo di input",
   "athlete_has_not_shared_plans": "{n} non ha condiviso cartelle o piani con tutti",
