Refine Italian translations and training terminology
Improve Italian localization for training planner and metrics

- Refined terminology for phases, targets, and progression
- Improved UI messages and alerts
- Clarified scientific metrics (TRIMP, TTE, training load)
- Ensured consistency in capitalization and style

--- a/src/lang/it.json
+++ b/src/lang/it.json
@@ -1221,7 +1221,7 @@
   "GEAR_title": "Tracciatori di bici, scarpe e altro equipaggiamento",
   "gender_not_set": "Il tuo sesso non è impostato, per favore aggiorna le tue impostazioni.",
   "Generate": "Creare",
-  "generating_preview": "Generazione anteprima in corso...",
+  "generating_preview": "Generazione dell’anteprima in corso..."
   "Glucose": "glucosio",
   "Glycolytic": "Glicolitico",
   "glycolytic_stream_title": "Contributo del sistema energetico lattacido",
@@ -1989,9 +1989,9 @@
   "pick_target_race": "Seleziona le gare da includere e scegli la gara obiettivo (dove termina il piano)",
   "Pickleball": "Pickleball",
   "Pilates": "Pilates",
-  "Place on Calendar": "Posiziona sul Calendario",
-  "placing_plan_on_calendar": "Posizionamento del piano sul calendario in corso...",
-  "Plan": "piano",
+  "Place on Calendar": "Aggiungi al Calendario",
+  "placing_plan_on_calendar": "Aggiunta del piano al calendario in corso...",
+  "Plan": "Piano",
   "Plan Builder": "Costruttore di Piani",
   "Plan duration": "Durata del piano",
   "Plan for the week": "Pianifica la settimana",
@@ -2131,7 +2131,7 @@
   "Profile": "Profilo",
   "Progress": "Progresso",
   "Progression Settings": "Impostazioni di Progressione",
-  "progression_plateau": "Piatto di progressione",
+  "progression_plateau": "Plateau di progressione"
   "progression_plateau_blurb": "I piani più lunghi raggiungono il plateau prima",
   "Prompt": "Richiesta",
   "Public": "Pubblico",
@@ -2146,8 +2146,8 @@
   "R-squared": "R-squared",
   "Race": "Gara",
   "Race / Commute": "Gara / Commute",
-  "Race-Based": "Basato sulla Gara",
-  "race_based_blurb": "Genera automaticamente le fasi basate sulle gare imminenti",
+  "Race-Based": "Basato sulle Gare",
+  "race_based_blurb": "Genera automaticamente le fasi in base alle gare imminenti",
   "Races": "Gare",
   "Races & Events": "Gare ed eventi",
   "Racquetball": "Racquetball",
@@ -2597,7 +2597,7 @@
   "Target Distance": "Distanza dell'obiettivo",
   "Target Load": "Carico di destinazione",
   "Target Race": "Gara Obiettivo",
-  "Target Time": "Tempo dell'obiettivo",
+  "Target Time": "Tempo obiettivo"
   "Target training load": "Carico di allenamento mirato",
   "Target Types": "Tipi di Obiettivo",
   "Targets": "Obiettivi",
@@ -2712,7 +2712,7 @@
   "Totals on top": "Totali in alto",
   "TRACE_CHART_text": "Grafico delle Tracce",
   "TRACE_CHART_title": "Grafico personalizzato delle tracce sulla linea temporale dell'attività",
-  "Track": "Traccia",
+  "Track": "Pista",
   "Track Ride": "Ciclismo su pista",
   "Trail Run": "Corsa trail",
   "Trainer": "Rullo",
@@ -2727,7 +2727,7 @@
   "Training load per day": "Carico di allenamento al giorno",
   "Training load per hour": "Carico di allenamento per ora",
   "Training Load Priority": "Priorità del carico di allenamento",
-  "Training Phases": "Fasi di Allenamento",
+  "Training Phases": "Fasi di allenamento",
   "Training Plan": "Piano di allenamento",
   "Training Plans & Workouts": "Piani di allenamento e allenamenti",
   "training_load": "Il carico di allenamento è una stima di quanto sia stata dura una data attività rispetto alle capacità dell'atleta. Per le attività con potenza dipende dall'intensità della sessione (rispetto all'FTP) e dalla durata. 1 ora al 100% di FTP è 100 di carico di allenamento (vedi <a href='https://www.sciencetosport.com/monitoring-training-load/' target='_blank' tabindex='-1'>www.sciencetosport.com</a>). Intervals.icu può anche stimare il carico di allenamento usando la frequenza cardiaca e il passo regolato in base alla pendenza. La priorità dei diversi carichi di allenamento e i modelli utilizzati sono configurabili nelle impostazioni.",
@@ -2741,11 +2741,11 @@
   "trial_ending_soon_p1": "Intervals.icu è gratuito, ma alcune funzionalità richiedono un abbonamento dopo un periodo di prova gratuito di {0} giorni. Il tuo periodo di prova terminerà il giorno {1}. Iscriviti per continuare a utilizzare funzionalità premium come il download di Strava e per supportare lo sviluppo di Intervals.icu!",
   "trial_ending_soon_subject": "La prova gratuita di Intervals.icu terminerà presto",
   "Trim %": "Taglia %",
-  "trimmed_week_alert": "{n} settimana(e) saranno tagliate dalla fine per adattarsi all'intervallo di date",
-  "trimp": "Punti di impulso di allenamento secondo Morton/Banister con coefficiente Green et al. Si tratta di una misura del carico di allenamento derivata dalla FC media dell'attività rispetto alla FC a riposo e alla FC massima e al tempo di movimento - <a href='https://www.researchgate.net/publication/20910238_Modeling_human_performance_in_running' target='_blank'>Modellazione della performance umana nella corsa</a>",
+  "{n} settimane verranno rimosse dalla fine per adattarsi all’intervallo di date"
+  "trimp": "Punti TRIMP (Training Impulse) secondo Morton/Banister con coefficiente di Green e collaboratori. È una misura del carico di allenamento derivata dalla frequenza cardiaca media dell’attività, in relazione alla FC a riposo, alla FC massima e al tempo di movimento - <a href='https://www.researchgate.net/publication/20910238_Modeling_human_performance_in_running' target='_blank'>Modellazione della performance umana nella corsa</a>",
   "TRIMP": "TRIMP",
   "TRIMP points": "Punti TRIMP",
-  "tte": "Il tempo fino all'esaurimento (TTE), come usato qui, è la durata massima che l'FTP o la potenza critica (CP) può essere mantenuta. Questo ha valore solo se hai effettivamente provato a vedere per quanto tempo puoi pedalare al tuo FTP o CP - <a target='_blank' href='https://help.trainingpeaks.com/hc/en-us/articles/360030945391-Introduction-To-The-Time-To-Exhaustion-TTE-Metric-In-WKO'>Il parametro TTE</a>",
+  "tte": "Il tempo fino all’esaurimento (TTE) indica la durata massima per cui l’FTP o la potenza critica (CP) possono essere mantenute. Questo valore è significativo solo se hai effettivamente testato per quanto tempo riesci a sostenere il tuo FTP o CP - <a target='_blank' href='https://help.trainingpeaks.com/hc/en-us/articles/360030945391-Introduction-To-The-Time-To-Exhaustion-TTE-Metric-In-WKO'>Il parametro TTE</a>",
   "TTE": "TTE",
   "Tube": "Tubo",
   "Tues": "Mar",
